--- a/app/assets/stylesheets/artists.scss
+++ b/app/assets/stylesheets/artists.scss
@@ -13,10 +13,6 @@
   height: 100px;
 }
 
-.artists_hr {
-  border-color: #000;
-}
-
 .artist_name {
   color: gray;
 }
